# sail-engine

./: CMakeLists.txt  README.md  xmake.lua
include/glad/: glad.h
src/: glad.c  main.cpp
src/core/camera/: Camera.h
src/core/color/: Color.h
src/core/event/: Event.h
src/core/events/: EventSystem.cpp  EventSystem.h
src/core/mesh/: Mesh.h  Shapes.h
src/core/object/: Object.h
src/core/object/block/: block.h
src/core/resources/color/: Color.h
src/core/resources/material/: Material.h
src/core/resources/mesh/: Mesh.h  MeshLibrary.cpp  MeshLibrary.h
src/core/resources/texture/: Texture.cpp  Texture.h
src/core/texture/: Texture.h
src/engine/: Render.h
src/engine/shader/: Shader.h
src/engine/ui/: UI.h
src/engine/ui/presets/: demoUI.h  testUI.h
src/engine/window/: Window.h
src/game/: Game.h
src/game/camera/: Camera.h
src/game/input/: Input.cpp  Input.h
src/game/lighting/: Lighting.h
src/game/objects/: SceneObject.h
src/game/objects/part/: Part.h
src/game/part/: Part.h
src/game/testGame/: testGame.h
src/libraries/: sailUtil.h
src/render/imgui/: ImGui.cpp  ImGui.h
src/render/imgui/presets/: ImGui_Preset1.cpp  ImGui_Preset1.h
src/render/renderer/: renderer.cpp  renderer.h
src/render/shader/: shader.h
src/render/window/: window.h
src/shaders/: fragmentShader.glsl  lightFragmentShader.glsl  lightingFragmentShader.glsl  vertexShader.glsl
